--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,8 @@
   <title>WorkOrderTimeline</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://naologic-com-assets.naologic.com/fonts/circular-std/circular-std.css">
+<!--  <link rel="icon" type="image/x-icon" href="favicon.ico">-->
 </head>
 <body>
   <app-root></app-root>
